@@ -581,7 +581,8 @@
   </module>
 
   <module id="gdl">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="gdm">
@@ -818,7 +819,8 @@
   </module>
 
   <module id="gnome-build">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
 
