@@ -790,9 +790,9 @@
       <module id="accerciser"/>
       <module id="anjuta" branch="gnome-2-24"/>
       <module id="devhelp" branch="gnome-2-22"/>
-      <module id="gdl"/>
+      <module id="gdl" branch="gnome-2-24"/>
       <module id="glade3" branch="gnome-2-22"/>
-      <module id="gnome-build"/>
+      <module id="gnome-build" branch="gnome-2-24"/>
       <module id="gnome-devel-docs"/>
     </category>
 
