@@ -1,3 +1,9 @@
+2008-10-02  Johannes Schmid  <jhs@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	gdl and gnome-build branched for GNOME 2.24
+
 2008-10-01  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
